--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+x64/
+Debug/
+.vs/
+.git/
+
 # Mono auto generated files
 mono_crash.*
 
